--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
           ...dadosAgendamento,
           servicos: servicosSelecionados,
           totalMinutos,
-          id: agendamentoCriado._id,
+          id: agendamentoCriado.id,
           status: agendamentoCriado.status || 'pendente'
         };
         
