--- a/admin.html
+++ b/admin.html
@@ -85,7 +85,7 @@
             <div class="container mx-auto">
                 <div class="flex space-x-8">
                     <button class="tab-btn active px-4 py-3 text-white border-b-2 border-gold"
-                        data-tab="agendamentos">Agendamentos</button>
+                      data-tab="agendamentos">Appointments</button>
                     <button class="tab-btn px-4 py-3 text-gray-400 hover:text-white border-b-2 border-transparent hover:border-gray-600"
                         data-tab="horarios">Manage Hours</button>
                     <button
@@ -101,7 +101,7 @@
             <div id="agendamentosTab" class="tab-content">
                 <div class="bg-gray-800 rounded-lg p-6">
                     <div class="flex justify-between items-center mb-6">
-                        <h2 class="text-xl font-bold">Gerenciar Agendamentos</h2>
+                        <h2 class="text-xl font-bold">Manage Appointments</h2>
                         <button id="recarregarAgendamentos"
                             class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors text-sm">
                             🔄 Recarregar
@@ -119,11 +119,11 @@
                             <label class="block text-sm font-medium text-gray-300 mb-2">Filtrar por Status</label>
                             <select id="filtroStatus" 
                                 class="w-full px-3 py-2 bg-gray-600 border border-gray-500 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
-                                <option value="">Todos os status</option>
-                                <option value="pendente">Pendente</option>
-                                <option value="confirmado">Confirmado</option>
-                                <option value="cancelado">Cancelado</option>
-                                <option value="finalizado">Finalizado</option>
+                                <option value="">All statuses</option>
+                                <option value="pendente">Pending</option>
+                                <option value="confirmado">Confirmed</option>
+                                <option value="cancelado">Canceled</option>
+                                <option value="finalizado">Finished</option>
                             </select>
                         </div>
                         <div class="flex items-end">
