--- a/admin.html
+++ b/admin.html
@@ -111,12 +111,12 @@
                     <!-- Filtros -->
                     <div class="grid md:grid-cols-3 gap-4 mb-6 p-4 bg-gray-700 rounded-lg">
                         <div>
-                            <label class="block text-sm font-medium text-gray-300 mb-2">Filtrar por Data</label>
+                            <label class="block text-sm font-medium text-gray-300 mb-2">Filter by Date</label>
                             <input type="date" id="filtroData" 
                                 class="w-full px-3 py-2 bg-gray-600 border border-gray-500 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-300 mb-2">Filtrar por Status</label>
+                            <label class="block text-sm font-medium text-gray-300 mb-2">Filter by Status</label>
                             <select id="filtroStatus" 
                                 class="w-full px-3 py-2 bg-gray-600 border border-gray-500 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
                                 <option value="">All statuses</option>
@@ -129,7 +129,7 @@
                         <div class="flex items-end">
                             <button id="limparFiltros"
                                 class="w-full bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-lg transition-colors text-sm">
-                                Limpar Filtros
+                                Clear Filters
                             </button>
                         </div>
                     </div>
@@ -732,10 +732,10 @@
 
   function formatarStatus(status) {
     const statusMap = {
-      'pendente': { text: 'Pendente', class: 'bg-yellow-900/50 border-yellow-500 text-yellow-200' },
-      'confirmado': { text: 'Confirmado', class: 'bg-green-900/50 border-green-500 text-green-200' },
-      'cancelado': { text: 'Cancelado', class: 'bg-red-900/50 border-red-500 text-red-200' },
-      'finalizado': { text: 'Finalizado', class: 'bg-blue-900/50 border-blue-500 text-blue-200' }
+      'pendente': { text: 'Pending', class: 'bg-yellow-900/50 border-yellow-500 text-yellow-200' },
+      'confirmado': { text: 'Confirmed', class: 'bg-green-900/50 border-green-500 text-green-200' },
+      'cancelado': { text: 'Canceled', class: 'bg-red-900/50 border-red-500 text-red-200' },
+      'finalizado': { text: 'Finished', class: 'bg-blue-900/50 border-blue-500 text-blue-200' }
     };
     return statusMap[status] || { text: status, class: 'bg-gray-900/50 border-gray-500 text-gray-200' };
   }
@@ -772,20 +772,20 @@
         <div class="flex flex-wrap gap-2">
           <select class="status-select px-2 py-1 bg-gray-600 border border-gray-500 rounded text-white text-sm" 
                   data-agendamento-id="${agendamento.id}">
-            <option value="pendente" ${agendamento.status === 'pendente' ? 'selected' : ''}>Pendente</option>
-            <option value="confirmado" ${agendamento.status === 'confirmado' ? 'selected' : ''}>Confirmado</option>
-            <option value="cancelado" ${agendamento.status === 'cancelado' ? 'selected' : ''}>Cancelado</option>
-            <option value="finalizado" ${agendamento.status === 'finalizado' ? 'selected' : ''}>Finalizado</option>
+            <option value="pendente" ${agendamento.status === 'pendente' ? 'selected' : ''}>Pending</option>
+            <option value="confirmado" ${agendamento.status === 'confirmado' ? 'selected' : ''}>Confirmed</option>
+            <option value="cancelado" ${agendamento.status === 'cancelado' ? 'selected' : ''}>Canceled</option>
+            <option value="finalizado" ${agendamento.status === 'finalizado' ? 'selected' : ''}>Finished</option>
           </select>
           
           <button class="salvar-status-btn bg-green-600 hover:bg-green-700 text-white px-3 py-1 rounded text-sm transition-colors"
                   data-agendamento-id="${agendamento.id}">
-            💾 Salvar
+            💾 Save
           </button>
           
           <button class="excluir-agendamento-btn bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded text-sm transition-colors"
                   data-agendamento-id="${agendamento.id}">
-            🗑️ Excluir
+            🗑️ Delete
           </button>
         </div>
       </div>
