--- a/admin.html
+++ b/admin.html
@@ -444,52 +444,72 @@
 
         <div>
           <label class="block text-sm font-medium text-gray-300 mb-2">Services</label>
+
           <div id="novoServicosGroup" class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+            <!-- Corte -->
             <label class="cursor-pointer">
               <input type="checkbox" name="novoServicos" value="Corte Masculino" data-minutos="20" class="peer sr-only">
-              <div
-                class="w-full rounded-lg border border-gray-600 px-3 py-2 text-sm flex items-center justify-between hover:border-gold transition-colors peer-checked:border-gold peer-checked:bg-gold/10">
-                <span class="font-medium">Corte Masculino</span>
+              <div class="w-full rounded-lg border border-gray-600 px-4 py-3 text-sm flex items-center justify-between
+                  hover:border-gold transition-colors
+                  peer-checked:border-gold peer-checked:bg-gold/10">
+                <span class="font-medium text-white">Corte Masculino</span>
                 <span class="text-gold font-semibold">20 min</span>
               </div>
             </label>
+
+            <!-- Barba & Bigode -->
             <label class="cursor-pointer">
               <input type="checkbox" name="novoServicos" value="Barba & Bigode" data-minutos="10" class="peer sr-only">
-              <div
-                class="w-full rounded-lg border border-gray-600 px-3 py-2 text-sm flex items-center justify-between hover:border-gold transition-colors peer-checked:border-gold peer-checked:bg-gold/10">
-                <span class="font-medium">Barba & Bigode</span>
+              <div class="w-full rounded-lg border border-gray-600 px-4 py-3 text-sm flex items-center justify-between
+                  hover:border-gold transition-colors
+                  peer-checked:border-gold peer-checked:bg-gold/10">
+                <span class="font-medium text-white">Barba &amp; Bigode</span>
                 <span class="text-gold font-semibold">10 min</span>
               </div>
             </label>
+
+            <!-- Skincare -->
             <label class="cursor-pointer">
               <input type="checkbox" name="novoServicos" value="Skincare" data-minutos="15" class="peer sr-only">
-              <div
-                class="w-full rounded-lg border border-gray-600 px-3 py-2 text-sm flex items-center justify-between hover:border-gold transition-colors peer-checked:border-gold peer-checked:bg-gold/10">
-                <span class="font-medium">Skincare</span>
+              <div class="w-full rounded-lg border border-gray-600 px-4 py-3 text-sm flex items-center justify-between
+                  hover:border-gold transition-colors
+                  peer-checked:border-gold peer-checked:bg-gold/10">
+                <span class="font-medium text-white">Skincare</span>
                 <span class="text-gold font-semibold">15 min</span>
               </div>
             </label>
+
+            <!-- Queratina -->
             <label class="cursor-pointer">
               <input type="checkbox" name="novoServicos" value="Queratina" data-minutos="60" class="peer sr-only">
-              <div
-                class="w-full rounded-lg border border-gray-600 px-3 py-2 text-sm flex items-center justify-between hover:border-gold transition-colors peer-checked:border-gold peer-checked:bg-gold/10">
-                <span class="font-medium">Queratina</span>
+              <div class="w-full rounded-lg border border-gray-600 px-4 py-3 text-sm flex items-center justify-between
+                  hover:border-gold transition-colors
+                  peer-checked:border-gold peer-checked:bg-gold/10">
+                <span class="font-medium text-white">Queratina</span>
                 <span class="text-gold font-semibold">1h</span>
               </div>
             </label>
           </div>
-          <p id="novoServicosErro" class="text-sm text-red-400 mt-1 hidden">Select at least one service.</p>
+
+          <div class="mt-2 flex items-center justify-between">
+            <p id="novoServicosErro" class="text-sm text-red-400 hidden">Select at least one service.</p>
+            <p class="text-sm text-gray-300">
+              Estimated total time: <span id="novoTempoTotal" class="text-gold font-semibold">0 min</span>
+            </p>
+          </div>
         </div>
 
+        <!-- Data -->
         <div>
-          <label for="novoData" class="block text-sm font-medium text-gray-300 mb-2">Date</label>
-          <input type="date" id="novoData" required
+          <label for="novoData" class="block text-sm font-medium text-gray-300 mb-2">Preferred Date</label>
+          <input type="date" id="novoData" name="novoData" required
             class="w-full px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
         </div>
 
+        <!-- Horário -->
         <div>
-          <label for="novoHorario" class="block text-sm font-medium text-gray-300 mb-2">Time</label>
-          <select id="novoHorario" required
+          <label for="novoHorario" class="block text-sm font-medium text-gray-300 mb-2">Preferred Time</label>
+          <select id="novoHorario" name="novoHorario" required
             class="w-full px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
             <option value="">Select a date first</option>
           </select>
