feat: select horario on edit agendamento

--- a/admin.html
+++ b/admin.html
@@ -385,8 +385,10 @@
 
         <div>
           <label for="editHorario" class="block text-sm font-medium text-gray-300 mb-2">Time</label>
-          <input type="time" id="editHorario" required
+          <select id="editHorario" required
             class="w-full px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
+            <option value="">Select a time</option>
+          </select>
         </div>
 
         <div>
