botao de subir em todas as abas

--- a/admin.html
+++ b/admin.html
@@ -219,13 +219,6 @@
 
           <div id="saveMsg" class="mt-4 hidden"></div>
         </div>
-
-        <button id="backToTopBtn"
-          class="fixed bottom-6 right-6 bg-gold hover:bg-darkgold text-black p-3 rounded-full shadow-lg transition-all duration-300 opacity-0 invisible z-40">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18" />
-          </svg>
-        </button>
       </div>
 
       <div id="senhaTab" class="tab-content hidden">
@@ -299,6 +292,14 @@
           <div id="senhaMessage" class="mt-4 p-3 rounded-lg hidden"></div>
         </div>
       </div>
+
+      <!-- Botão flutuante para voltar ao topo - aparece em todas as abas -->
+      <button id="backToTopBtn"
+        class="fixed bottom-6 right-6 bg-gold hover:bg-darkgold text-black p-3 rounded-full shadow-lg transition-all duration-300 opacity-0 invisible z-40">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+        </svg>
+      </button>
     </main>
   </div>
 
