--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@
         <!-- Service 1 -->
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
-            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 20 20">
-              <path
-                d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z">
-              </path>
+            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12,0C8.96,0 6.21,1.23 4.22,3.22L5.63,4.63C7.26,3 9.5,2 12,2C14.5,2 16.74,3 18.37,4.63L19.78,3.22C17.79,1.23 15.04,0 12,0M7.76,6.76C6.67,7.85 6,9.35 6,11H8C8,9.89 8.42,8.9 9.1,8.1L7.76,6.76M16.24,6.76L14.9,8.1C15.58,8.9 16,9.89 16,11H18C18,9.35 17.33,7.85 16.24,6.76M12,12A4,4 0 0,0 8,16A4,4 0 0,0 12,20A4,4 0 0,0 16,16A4,4 0 0,0 12,12M12,14A2,2 0 0,1 14,16A2,2 0 0,1 12,18A2,2 0 0,1 10,16A2,2 0 0,1 12,14Z"/>
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Corte Masculino</h3>
@@ -109,10 +107,8 @@
         <!-- Service 2 -->
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
-            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 20 20">
-              <path fill-rule="evenodd"
-                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
-                clip-rule="evenodd"></path>
+            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.9 10.9,2 12,2M21,9V7L15,1L13.5,2.5L16.17,5.17L10.5,10.84L11.91,12.25L12.5,11.66L14.5,13.66L12.5,15.66L7.91,11.07L6.5,12.5L11.08,17.08L13.92,14.25L15.92,16.25L15.33,16.84L16.75,18.25L22.5,12.5L21,9M1.39,4.22L7.07,9.91L3.91,13.07L2.5,11.65L4.24,9.91L3.83,9.5L5.24,8.09L6.65,9.5L7.07,9.08L12.78,14.78L11.37,16.19L5.66,10.5L1.39,4.22Z"/>
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Barba & Bigode</h3>
@@ -125,10 +121,8 @@
         <!-- Service 3 -->
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
-            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 20 20">
-              <path fill-rule="evenodd"
-                d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                clip-rule="evenodd"></path>
+            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,8.39C13.57,9.4 15.42,10 17.42,10C18.2,10 18.95,9.91 19.67,9.74C19.88,10.45 20,11.21 20,12C20,16.41 16.41,20 12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C13.6,4 15.1,4.5 16.34,5.36C14.9,6.1 13.8,7.33 12,8.39Z"/>
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Skincare</h3>
@@ -141,10 +135,8 @@
         <!-- Service 4 -->
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
-            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 20 20">
-              <path
-                d="M12 6V4a2 2 0 00-2-2H8a2 2 0 00-2 2v2H4a2 2 0 00-2 2v6a2 2 0 002 2h12a2 2 0 002-2V8a2 2 0 00-2-2h-2zM8 6V4h2v2H8z">
-              </path>
+            <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12,2C13.1,2 14,2.9 14,4V5.08C16.39,5.57 18,7.47 18,9.8V15L19.5,16.5V17.5H16.5C16.5,19.43 14.93,21 13,21H11C9.07,21 7.5,19.43 7.5,17.5H4.5V16.5L6,15V9.8C6,7.47 7.61,5.57 10,5.08V4C10,2.9 10.9,2 12,2M16,15.5L14.5,14H9.5L8,15.5V9.8C8,8.24 9.24,7 10.8,7H13.2C14.76,7 16,8.24 16,9.8V15.5Z"/>
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Queratina</h3>
@@ -610,8 +602,8 @@
             <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"
               class="w-10 h-10 bg-gold/10 rounded-full flex items-center justify-center hover:bg-gold/20 transition-colors">
               <svg class="w-5 h-5 text-gold" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+              <path
+                d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
               </svg>
             </a>
             <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
@@ -624,8 +616,8 @@
             <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
               class="w-10 h-10 bg-gold/10 rounded-full flex items-center justify-center hover:bg-gold/20 transition-colors">
               <svg class="w-5 h-5 text-gold" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.174-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.402.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.357-.629-2.749-1.378l-.748 2.853c-.271 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24.009 12.017 24.009c6.624 0 11.99-5.367 11.99-11.988C24.007 5.367 18.641.001.012.001z" />
+              <path
+                d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
               </svg>
             </a>
           </div>
