--- a/admin.html
+++ b/admin.html
@@ -81,19 +81,20 @@
 
   <div id="adminDashboard" class="hidden">
     <header class="bg-gray-800 border-b border-gray-700 p-4">
-      <div class="container mx-auto flex items-center justify-between">
-        <h1 class="text-2xl font-bold text-gold">Admin Dashboard</h1>
-        <div class="flex items-center space-x-4">
-          <span class="text-gray-300">Welcome, <span id="adminName">Admin</span></span>
+      <div class="container mx-auto flex flex-col sm:flex-row items-center justify-between gap-4">
+        <h1 class="text-xl sm:text-2xl font-bold text-gold">Admin Dashboard</h1>
+        <div class="flex flex-col sm:flex-row items-center gap-2 sm:gap-4">
+          <span class="text-gray-300 text-sm sm:text-base">Welcome, <span id="adminName">Admin</span></span>
           <button id="logoutBtn"
-            class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg transition-colors">Logout</button>
+            class="bg-red-600 hover:bg-red-700 text-white px-3 py-1.5 sm:px-4 sm:py-2 rounded-lg transition-colors text-sm">Logout</button>
         </div>
       </div>
     </header>
 
     <nav class="bg-gray-800 border-b border-gray-700">
       <div class="container mx-auto">
-        <div class="flex space-x-8">
+        <!-- Desktop tabs -->
+        <div class="hidden md:flex space-x-8">
           <button class="tab-btn active px-4 py-3 text-white border-b-2 border-gold"
             data-tab="agendamentos">Appointments</button>
           <button
@@ -103,31 +104,40 @@
             class="tab-btn px-4 py-3 text-gray-400 hover:text-white border-b-2 border-transparent hover:border-gray-600"
             data-tab="senha">Change Password</button>
         </div>
+        
+        <!-- Mobile tabs -->
+        <div class="md:hidden">
+          <select id="mobileTabSelect" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-3 py-2 text-white focus:ring-2 focus:ring-gold m-4">
+            <option value="agendamentos">📅 Appointments</option>
+            <option value="horarios">⏰ Manage Hours</option>
+            <option value="senha">🔒 Change Password</option>
+          </select>
+        </div>
       </div>
     </nav>
 
-    <main class="container mx-auto p-6">
+    <main class="container mx-auto p-4 sm:p-6">
       <div id="agendamentosTab" class="tab-content">
-        <div class="bg-gray-800 rounded-lg p-6">
-          <div class="flex justify-between items-center mb-6">
-            <h2 class="text-xl font-bold">Manage Appointments</h2>
-            <div class="flex gap-2">
+        <div class="bg-gray-800 rounded-lg p-4 sm:p-6">
+          <div class="flex flex-col lg:flex-row lg:justify-between lg:items-center mb-6 gap-4">
+            <h2 class="text-lg sm:text-xl font-bold">Manage Appointments</h2>
+            <div class="flex flex-col sm:flex-row gap-2">
               <button id="novoAgendamentoBtn"
-                class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg transition-colors text-sm">
+                class="bg-green-600 hover:bg-green-700 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-lg transition-colors text-sm whitespace-nowrap">
                 ➕ New Appointment
               </button>
               <button id="limparAgendamentosPassados"
-                class="bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded-lg transition-colors text-sm">
+                class="bg-orange-600 hover:bg-orange-700 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-lg transition-colors text-sm whitespace-nowrap">
                 🗑️ Clean Past
               </button>
               <button id="recarregarAgendamentos"
-                class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors text-sm">
+                class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-lg transition-colors text-sm whitespace-nowrap">
                 🔄 Reload
               </button>
             </div>
           </div>
 
-          <div class="grid md:grid-cols-3 gap-4 mb-6 p-4 bg-gray-700 rounded-lg">
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 mb-6 p-4 bg-gray-700 rounded-lg">
             <div>
               <label class="block text-sm font-medium text-gray-300 mb-2">Filter by Date</label>
               <input type="date" id="filtroData"
@@ -160,30 +170,30 @@
           </div>
 
           <div id="paginationContainer" class="mt-6 hidden">
-            <div class="flex flex-col sm:flex-row items-center justify-between gap-4">
-              <div class="text-sm text-gray-400">
+            <div class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between">
+              <div class="text-sm text-gray-400 text-center sm:text-left">
                 Showing <span id="paginationInfo">0-0 of 0</span> appointments
-                <span id="pageInfo" class="ml-2 text-gold font-medium"></span>
+                <span id="pageInfo" class="block sm:inline ml-0 sm:ml-2 text-gold font-medium"></span>
               </div>
-              <div class="flex items-center space-x-1">
+              <div class="flex items-center justify-center space-x-1 overflow-x-auto pb-2">
                 <button id="firstPageBtn"
-                  class="px-2 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded text-sm disabled:opacity-50 disabled:cursor-not-allowed"
+                  class="px-2 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded text-sm disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
                   disabled>
                   ⇤ First
                 </button>
                 <button id="prevPageBtn"
-                  class="px-3 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded disabled:opacity-50 disabled:cursor-not-allowed"
+                  class="px-2 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded text-sm disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
                   disabled>
-                  ← Previous
+                  ← Prev
                 </button>
                 <span id="pageNumbers" class="flex items-center space-x-1"></span>
                 <button id="nextPageBtn"
-                  class="px-3 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded disabled:opacity-50 disabled:cursor-not-allowed"
+                  class="px-2 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded text-sm disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
                   disabled>
                   Next →
                 </button>
                 <button id="lastPageBtn"
-                  class="px-2 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded text-sm disabled:opacity-50 disabled:cursor-not-allowed"
+                  class="px-2 py-1 bg-gray-600 hover:bg-gray-500 text-white rounded text-sm disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
                   disabled>
                   Last ⇥
                 </button>
@@ -196,13 +206,13 @@
       </div>
 
       <div id="horariosTab" class="tab-content hidden">
-        <div class="bg-gray-800 rounded-lg p-6">
-          <h2 class="text-xl font-bold mb-6">Manage Available Hours</h2>
+        <div class="bg-gray-800 rounded-lg p-4 sm:p-6">
+          <h2 class="text-lg sm:text-xl font-bold mb-6">Manage Available Hours</h2>
 
-          <div id="diasGrid" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <div id="diasGrid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
           </div>
 
-          <div class="flex flex-col sm:flex-row sm:justify-between mt-8 gap-4">
+          <div class="flex flex-col lg:flex-row lg:justify-between mt-8 gap-4">
             <div class="flex flex-col sm:flex-row gap-2 sm:space-x-4 sm:gap-0">
               <button id="selectAllBtn"
                 class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg transition-colors text-sm">Select
@@ -222,8 +232,8 @@
       </div>
 
       <div id="senhaTab" class="tab-content hidden">
-        <div class="bg-gray-800 rounded-lg p-6 max-w-md">
-          <h2 class="text-xl font-bold mb-6">Change Password</h2>
+        <div class="bg-gray-800 rounded-lg p-4 sm:p-6 max-w-md mx-auto">
+          <h2 class="text-lg sm:text-xl font-bold mb-6">Change Password</h2>
 
           <form id="senhaForm" class="space-y-4">
             <div>
@@ -305,10 +315,10 @@
 
   <div id="editModal"
     class="fixed inset-0 bg-black/50 backdrop-blur-sm z-50 hidden flex items-center justify-center p-4">
-    <div class="bg-gray-800 rounded-2xl shadow-2xl max-w-md w-full max-h-[90vh] overflow-y-auto">
-      <div class="p-6 border-b border-gray-700">
+    <div class="bg-gray-800 rounded-2xl shadow-2xl max-w-md w-full max-h-[90vh] overflow-y-auto mx-4">
+      <div class="p-4 sm:p-6 border-b border-gray-700">
         <div class="flex items-center justify-between">
-          <h2 class="text-xl font-bold text-gold">Edit Appointment</h2>
+          <h2 class="text-lg sm:text-xl font-bold text-gold">Edit Appointment</h2>
           <button id="closeEditModal" class="text-gray-400 hover:text-white">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -317,7 +327,7 @@
         </div>
       </div>
 
-      <form id="editForm" class="p-6 space-y-4">
+      <form id="editForm" class="p-4 sm:p-6 space-y-4">
         <input type="hidden" id="editAgendamentoId">
 
         <div>
@@ -334,7 +344,7 @@
 
         <div>
           <label class="block text-sm font-medium text-gray-300 mb-2">Service</label>
-          <div id="editServicosGroup" class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+          <div id="editServicosGroup" class="grid grid-cols-1 gap-3">
             <label class="cursor-pointer">
               <input type="checkbox" name="editServicos" value="Corte Masculino" data-minutos="20" class="peer sr-only">
               <div class="w-full rounded-lg border border-gray-600 px-3 py-2 text-sm flex items-center justify-between
@@ -448,7 +458,7 @@
         <div>
           <label class="block text-sm font-medium text-gray-300 mb-2">Services</label>
 
-          <div id="novoServicosGroup" class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+          <div id="novoServicosGroup" class="grid grid-cols-1 gap-3">
             <!-- Corte -->
             <label class="cursor-pointer">
               <input type="checkbox" name="novoServicos" value="Corte Masculino" data-minutos="20" class="peer sr-only">
