--- a/admin.html
+++ b/admin.html
@@ -106,8 +106,8 @@
         </div>
         
         <!-- Mobile tabs -->
-        <div class="md:hidden">
-          <select id="mobileTabSelect" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-3 py-2 text-white focus:ring-2 focus:ring-gold m-4">
+        <div class="md:hidden p-4">
+          <select id="mobileTabSelect" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-3 py-2 text-white focus:ring-2 focus:ring-gold">
             <option value="agendamentos">📅 Appointments</option>
             <option value="horarios">⏰ Manage Hours</option>
             <option value="senha">🔒 Change Password</option>
