feat: adiciona o aviso na versao mobile também

--- a/admin.html
+++ b/admin.html
@@ -529,6 +529,9 @@
             class="w-full px-3 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:ring-2 focus:ring-gold focus:border-transparent text-white">
             <option value="">Select a date first</option>
           </select>
+          <p class="text-xs text-blue-300 mt-1">
+            🛡️ Admin privilege: You can override occupied times or insufficient time warnings
+          </p>
         </div>
 
         <div>
