--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="absolute inset-0 bg-black/20"></div>
     <div class="container mx-auto px-4 text-center relative z-10">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 text-white">
-        Estilo e <span class="text-gold">Elegância</span>
+       Barbearia <span class="text-gold">Vip</span>
       </h1>
       <p class="text-xl md:text-2xl mb-8 text-gray-200 max-w-2xl mx-auto">
         Transforme seu visual com os melhores profissionais da cidade. Cortes modernos, barba impecável e um atendimento
