--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin - Barbearia VIP</title>
-  <link rel="icon" type="image/png" href="fotos/iconAba.png">
+  <!-- Favicon para diferentes tamanhos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="fotos/iconAba.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="fotos/iconAba.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="fotos/iconAba.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="fotos/iconAba.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
