--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barbearia VIP - Sua Barbearia de Confiança</title>
-  <!-- Favicon para diferentes tamanhos -->
-  <link rel="icon" type="image/png" sizes="16x16" href="fotos/iconAba.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="fotos/iconAba.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="fotos/iconAba.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="fotos/iconAba.png">
+  <!-- Favicon principal em formato ICO -->
+  <link rel="icon" type="image/x-icon" href="fotos/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="fotos/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
