feat: description seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barbearia VIP - Sua Barbearia de Confiança</title>
+  <meta name="description" content="Barbearia VIP oferece os melhores serviços de corte masculino, barba & bigode, skincare e queratina. Agendamento online fácil e rápido. Profissionais qualificados e ambiente premium para o cuidado masculino completo.">
+  <meta name="keywords" content="barbearia, corte masculino, barba, bigode, skincare, queratina, agendamento online, barbearia vip, cuidado masculino">
+  <meta name="author" content="Barbearia VIP">
+  <meta name="robots" content="index, follow">
   <!-- Favicon principal em formato ICO -->
   <link rel="icon" type="image/x-icon" href="fotos/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="fotos/favicon.ico">
