--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Barbearia VIP - Sua Barbearia de Confiança</title>
-  <meta name="description" content="Barbearia VIP oferece os melhores serviços de corte masculino, barba & bigode, skincare e queratina. Agendamento online fácil e rápido. Profissionais qualificados e ambiente premium para o cuidado masculino completo.">
-  <meta name="keywords" content="barbearia, corte masculino, barba, bigode, skincare, queratina, agendamento online, barbearia vip, cuidado masculino">
+  <title>Corte Masculino & Barba em Foz do Iguaçu | Barbearia VIP</title>
+  <meta name="description"
+    content="Cortes masculinos, barba e skincare em ambiente premium. Agende online com profissionais qualificados na Barbearia VIP em Foz do Iguaçu.">
+ 
   <meta name="author" content="Barbearia VIP">
   <meta name="robots" content="index, follow">
   <!-- Favicon principal em formato ICO -->
@@ -65,7 +66,7 @@
     <div class="absolute inset-0 bg-black/20"></div>
     <div class="container mx-auto px-4 text-center relative z-10">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 text-white">
-       Barbearia <span class="text-gold">VIP</span>
+        Barbearia <span class="text-gold">VIP</span>
       </h1>
       <p class="text-xl md:text-2xl mb-8 text-gray-200 max-w-2xl mx-auto">
         Transforme seu visual com os melhores profissionais da cidade. Cortes modernos, barba impecável e um atendimento
@@ -101,7 +102,8 @@
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
             <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12,0C8.96,0 6.21,1.23 4.22,3.22L5.63,4.63C7.26,3 9.5,2 12,2C14.5,2 16.74,3 18.37,4.63L19.78,3.22C17.79,1.23 15.04,0 12,0M7.76,6.76C6.67,7.85 6,9.35 6,11H8C8,9.89 8.42,8.9 9.1,8.1L7.76,6.76M16.24,6.76L14.9,8.1C15.58,8.9 16,9.89 16,11H18C18,9.35 17.33,7.85 16.24,6.76M12,12A4,4 0 0,0 8,16A4,4 0 0,0 12,20A4,4 0 0,0 16,16A4,4 0 0,0 12,12M12,14A2,2 0 0,1 14,16A2,2 0 0,1 12,18A2,2 0 0,1 10,16A2,2 0 0,1 12,14Z"/>
+              <path
+                d="M12,0C8.96,0 6.21,1.23 4.22,3.22L5.63,4.63C7.26,3 9.5,2 12,2C14.5,2 16.74,3 18.37,4.63L19.78,3.22C17.79,1.23 15.04,0 12,0M7.76,6.76C6.67,7.85 6,9.35 6,11H8C8,9.89 8.42,8.9 9.1,8.1L7.76,6.76M16.24,6.76L14.9,8.1C15.58,8.9 16,9.89 16,11H18C18,9.35 17.33,7.85 16.24,6.76M12,12A4,4 0 0,0 8,16A4,4 0 0,0 12,20A4,4 0 0,0 16,16A4,4 0 0,0 12,12M12,14A2,2 0 0,1 14,16A2,2 0 0,1 12,18A2,2 0 0,1 10,16A2,2 0 0,1 12,14Z" />
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Corte Masculino</h3>
@@ -115,7 +117,8 @@
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
             <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.9 10.9,2 12,2M21,9V7L15,1L13.5,2.5L16.17,5.17L10.5,10.84L11.91,12.25L12.5,11.66L14.5,13.66L12.5,15.66L7.91,11.07L6.5,12.5L11.08,17.08L13.92,14.25L15.92,16.25L15.33,16.84L16.75,18.25L22.5,12.5L21,9M1.39,4.22L7.07,9.91L3.91,13.07L2.5,11.65L4.24,9.91L3.83,9.5L5.24,8.09L6.65,9.5L7.07,9.08L12.78,14.78L11.37,16.19L5.66,10.5L1.39,4.22Z"/>
+              <path
+                d="M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.9 10.9,2 12,2M21,9V7L15,1L13.5,2.5L16.17,5.17L10.5,10.84L11.91,12.25L12.5,11.66L14.5,13.66L12.5,15.66L7.91,11.07L6.5,12.5L11.08,17.08L13.92,14.25L15.92,16.25L15.33,16.84L16.75,18.25L22.5,12.5L21,9M1.39,4.22L7.07,9.91L3.91,13.07L2.5,11.65L4.24,9.91L3.83,9.5L5.24,8.09L6.65,9.5L7.07,9.08L12.78,14.78L11.37,16.19L5.66,10.5L1.39,4.22Z" />
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Barba & Bigode</h3>
@@ -129,7 +132,8 @@
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
             <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,8.39C13.57,9.4 15.42,10 17.42,10C18.2,10 18.95,9.91 19.67,9.74C19.88,10.45 20,11.21 20,12C20,16.41 16.41,20 12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C13.6,4 15.1,4.5 16.34,5.36C14.9,6.1 13.8,7.33 12,8.39Z"/>
+              <path
+                d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,8.39C13.57,9.4 15.42,10 17.42,10C18.2,10 18.95,9.91 19.67,9.74C19.88,10.45 20,11.21 20,12C20,16.41 16.41,20 12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C13.6,4 15.1,4.5 16.34,5.36C14.9,6.1 13.8,7.33 12,8.39Z" />
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Skincare</h3>
@@ -143,7 +147,8 @@
         <div class="bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow">
           <div class="w-20 h-20 bg-gold/10 rounded-full flex items-center justify-center mb-6">
             <svg class="w-10 h-10 text-gold" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12,2C13.1,2 14,2.9 14,4V5.08C16.39,5.57 18,7.47 18,9.8V15L19.5,16.5V17.5H16.5C16.5,19.43 14.93,21 13,21H11C9.07,21 7.5,19.43 7.5,17.5H4.5V16.5L6,15V9.8C6,7.47 7.61,5.57 10,5.08V4C10,2.9 10.9,2 12,2M16,15.5L14.5,14H9.5L8,15.5V9.8C8,8.24 9.24,7 10.8,7H13.2C14.76,7 16,8.24 16,9.8V15.5Z"/>
+              <path
+                d="M12,2C13.1,2 14,2.9 14,4V5.08C16.39,5.57 18,7.47 18,9.8V15L19.5,16.5V17.5H16.5C16.5,19.43 14.93,21 13,21H11C9.07,21 7.5,19.43 7.5,17.5H4.5V16.5L6,15V9.8C6,7.47 7.61,5.57 10,5.08V4C10,2.9 10.9,2 12,2M16,15.5L14.5,14H9.5L8,15.5V9.8C8,8.24 9.24,7 10.8,7H13.2C14.76,7 16,8.24 16,9.8V15.5Z" />
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-4">Queratina</h3>
@@ -540,7 +545,7 @@
               </div>
             </div>
 
-            
+
 
             <div class="flex items-start space-x-4">
               <div
@@ -596,8 +601,8 @@
             <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"
               class="w-10 h-10 bg-gold/10 rounded-full flex items-center justify-center hover:bg-gold/20 transition-colors">
               <svg class="w-5 h-5 text-gold" fill="currentColor" viewBox="0 0 24 24">
-              <path
-                d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+                <path
+                  d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
               </svg>
             </a>
             <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
@@ -610,8 +615,8 @@
             <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
               class="w-10 h-10 bg-gold/10 rounded-full flex items-center justify-center hover:bg-gold/20 transition-colors">
               <svg class="w-5 h-5 text-gold" fill="currentColor" viewBox="0 0 24 24">
-              <path
-                d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+                <path
+                  d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
               </svg>
             </a>
           </div>
@@ -754,14 +759,14 @@
   </div>
 
   <!-- Botão Flutuante - Voltar ao Topo -->
-  <button id="backToTopBtn" 
-      class="fixed bottom-6 right-6 bg-gold hover:bg-darkgold text-black p-3 rounded-full shadow-lg transition-all duration-300 opacity-0 invisible z-50">
-      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"/>
-      </svg>
+  <button id="backToTopBtn"
+    class="fixed bottom-6 right-6 bg-gold hover:bg-darkgold text-black p-3 rounded-full shadow-lg transition-all duration-300 opacity-0 invisible z-50">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+    </svg>
   </button>
 
- <script src="index.js"></script>
+  <script src="index.js"></script>
 
 </body>
 
