--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Corte Masculino & Barba em Foz do Iguaçu | Barbearia VIP</title>
-  <meta name="description"
-    content="Cortes masculinos, barba e skincare em ambiente premium. Agende online com profissionais qualificados na Barbearia VIP em Foz do Iguaçu.">
- 
+  <meta name="description" content="Cortes masculinos, barba e skincare em ambiente premium. Agende online com profissionais qualificados na Barbearia VIP em Foz do Iguaçu.">
   <meta name="author" content="Barbearia VIP">
   <meta name="robots" content="index, follow">
   <!-- Favicon principal em formato ICO -->
-  <link rel="icon" type="image/x-icon" href="fotos/favicon.ico">
-  <link rel="shortcut icon" type="image/x-icon" href="fotos/favicon.ico">
+  <link rel="icon" href="fotos/favicon.ico"> 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
