--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Cortes masculinos, barba e skincare em ambiente premium. Agende online com profissionais qualificados na Barbearia VIP em Foz do Iguaçu.">
   <meta name="author" content="Barbearia VIP">
   <meta name="robots" content="index, follow">
-  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
+  <link rel="icon" href="myIcon.ico?v=2" type="image/x-icon" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
