--- a/admin.html
+++ b/admin.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin - Barbearia VIP</title>
   <!-- Favicon principal em formato ICO -->
-  <link rel="icon" type="image/x-icon" href="fotos/favicon.ico">
-  <link rel="shortcut icon" type="image/x-icon" href="fotos/favicon.ico"> 
+  <link rel="icon" type="image/x-icon" href="myIcon.ico"> 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
