--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Barbearia VIP">
   <meta name="robots" content="index, follow">
   <link rel="icon" href="myIcon.ico?v=2" type="image/x-icon" />
+  <link rel="canonical" href="https://barbeariavip.site/">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
