--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                 class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors text-center">
                 Abrir no Google Maps
               </a>
-              <!-- Corrigido: link usa JS para codificar o texto e enviar -->
-              <a href="#" id="waDirections"
+              <!-- Link direto do WhatsApp com fallback para JS -->
+              <a href="https://wa.me/5545991321488?text=Ol%C3%A1%21%20Preciso%20de%20dire%C3%A7%C3%B5es%20para%20chegar%20na%20barbearia%20no%20endere%C3%A7o%3A%20Jos%C3%A9%20Maria%20de%20Brito%2C%201250%20-%20Foz%20do%20Igua%C3%A7u%2C%20PR" id="waDirections"
                 class="flex-1 bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors text-center">
                 Pedir Direções via WhatsApp
               </a>
@@ -444,7 +444,7 @@
             <h3 class="text-3xl font-bold mb-2">Agendamento via WhatsApp</h3>
             <p class="text-xl opacity-90">Fale conosco agora mesmo!</p>
           </div>
-          <a href="#" id="waMainCta"
+          <a href="https://wa.me/5545991321488?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20um%20hor%C3%A1rio%20na%20Barbearia%20VIP." id="waMainCta"
             class="inline-flex items-center justify-center bg-white text-green-600 font-bold py-4 px-8 rounded-xl text-lg hover:bg-gray-100 transition-colors shadow-lg group">
             <svg class="w-6 h-6 mr-3 group-hover:scale-110 transition-transform" fill="currentColor"
               viewBox="0 0 24 24">
@@ -471,7 +471,7 @@
             <div>
               <h3 class="font-semibold text-lg mb-2">WhatsApp</h3>
               <p class="text-gray-600 dark:text-gray-300 mb-2">+55 (45) 9 9132-1488</p>
-              <a href="#" id="waInfo" class="text-green-600 hover:text-green-700 font-medium">
+              <a href="https://wa.me/5545991321488?text=Ol%C3%A1%21%20Preciso%20de%20informa%C3%A7%C3%B5es%20sobre%20os%20servi%C3%A7os%20da%20barbearia." id="waInfo" class="text-green-600 hover:text-green-700 font-medium">
                 Enviar mensagem →
               </a>
             </div>
@@ -562,7 +562,7 @@
           </div>
 
           <div class="mt-8 text-center">
-            <a href="#" id="waSecondaryCta"
+            <a href="https://wa.me/5545991321488?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20um%20hor%C3%A1rio." id="waSecondaryCta"
               class="inline-flex items-center justify-center bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors">
               <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                 <path
